--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1>チュートリアル<h1>
   <h2>さい変更した<h2>
-<p>git status<p>
-<p>git diff<p>
-<p>git commit<p>
+<p>git status</p>
+<p>git diff</p>
+<p>git commit</p>
+<p>git merge</p>
